ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentication-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.indbank.security.auth
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentication-service
                port:
                  number: 7079
